# Ezra

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  README.md  build.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml  security.yml
agent/: .env.example  Dockerfile  pyproject.toml
agent/ezra_agent/: __init__.py  cli.py  companion_client.py  config.py  device.py  executor.py  main.py
bootstrap/: .golangci.yml  Makefile  go.mod  go.sum
bootstrap/cmd/ezra-bootstrap/: main.go
bootstrap/internal/config/: config.go
bootstrap/internal/installer/: installer.go
bootstrap/internal/logger/: logger.go
bootstrap/pkg/detector/: detector.go
bootstrap/pkg/downloader/: downloader.go
bootstrap/pkg/verifier/: verifier.go
companion/: .env.example  .eslintrc.json  Dockerfile  config.example.json  package.json
companion/src/: agent.ts  crypto.ts  example.test.ts  index.ts  server.ts  setup.ts
companion/src/llm/: anthropic.ts  google.ts  index.ts  openai.ts
executor/: pyproject.toml
executor/ezra_executor/: __init__.py  executor.py
executor/ezra_executor/adapters/: __init__.py  android.py  base.py  linux.py  windows.py
installers/linux/: install.sh
installers/usb/: README.md
installers/windows/: install.ps1
schemas/: README.md  package.json
schemas/python/: __init__.py  action_plan.py  audit_log.py  device_manifest.py  pyproject.toml
schemas/python/tests/: __init__.py  test_action_plan.py  test_audit_log.py  test_device_manifest.py
schemas/src/: action-plan.schema.json  audit-log.schema.json  crypto.ts  device-manifest.schema.json  index.ts  schemas.ts  types.ts
schemas/src/__tests__/: action-plan.test.ts  audit-log.test.ts  device-manifest.test.ts
